--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -57,6 +57,8 @@ custom_css = ["css/custom.css"]
     btn = true
     btnText="Explore Us"
     btnURL="#services"
+        [params.banner.arrow]
+        enable = true
 
     # call to action
     [params.cta]
